<resources>

    <bool name="isTablet">false</bool>
    <string name="app_name" translatable="false">Real Estate Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="media">Media</string>
    <string name="description">Description</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="statut_prompt">Choose a statut</string>
    <string name="real_estate_manager">Real estate manager</string>
    <string name="date_of_sale">date of sale</string>
    <string name="created_date">Created date</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="area_m">Area (m²)</string>
    <string name="price_dollar">Price</string>
    <string name="adress">Adress</string>
    <string name="additional_adress">Additional adress</string>
    <string name="postal_code">Postal code</string>
    <string name="country">Country</string>
    <string name="place_nearby">Place nearby</string>
    <string name="next">Next</string>
    <string name="main_picture">Main picture</string>
    <string name="add_picture">Add picture</string>
    <string name="progress">Save</string>
    <string name="stop">Stop</string>
    <string name="surface">Surface</string>
    <string name="test_m" translatable="false">test m²</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms :</string>
    <string name="number_of_bedrooms">Number of bedrooms :</string>
    <string name="location">Location</string>
    <string name="annuler_la_recherche">Cancel search</string>
    <string name="vendu">SOLD</string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="min_area">Min area</string>
    <string name="max_area">Max area</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="min_room">Min number of room</string>
    <string name="max_room">Max number of room</string>
    <string name="min_created_date">Min created date :</string>
    <string name="max_created_date">Max created date :</string>
    <string name="min_sale_date">Min sale date :</string>
    <string name="max_sale_date">Max sale date :</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="choose_property">Choose a property</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_valid_address">no valid address</string>
    <string name="field_cannot_be_blank">This field cannot be blank</string>
    <string name="Address_not_found">Address not found</string>
    <string name="change_adress">Your address can not be located Do you want to change it?</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="select_main_picture">Select main picture</string>
    <string name="not_camera">Your device does not have a camera</string>
    <string name="no_picture_choose">no picture choose</string>
    <string name="choose_a_property">CHOOSE A PROPERTY</string>
    <string name="or">OR</string>
    <string name="create_a_new_property">CREATE A NEW PROPERTY</string>
    <string name="channel_name" translatable="false">notification channel</string>
    <string name="channel_description" translatable="false">chanel description</string>
    <string name="property_creates">Property creates</string>
    <string name="property_save">The property has been saved in the database</string>
    <string name="edited_property_notification">The property has been edited in the database</string>
    <string name="property_edited_notification_title">Property edited</string>
    <string name="statut">Status :</string>
    <string name="currency">Currency</string>
    <string name="setting">Setting</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_connection_check_adress">No internet connection. We can\'t check the address</string>
    <string name="no_internet_cant_display_property">No internet connection. We can\'t display the property on the map</string>
    <string name="price">Price</string>
    <string name="contribution">Contribution</string>
    <string name="interest_rate">Interest rate</string>
    <string name="duration">Duration (in years)</string>
    <string name="simulate">Simulate</string>
    <string name="back">Back</string>
    <string name="sup">Must be greater than zero</string>
    <string name="ok">Ok</string>
    <string name="simulator">Simulator</string>
    <string name="per_month">per month</string>
    <string name="for_years">" for "</string>
    <string name="years">" years"</string>
    <string name="totalPrice">"Total price : "</string>
    <string name="map">Map</string>
    <string name="settings">settings</string>
    <string name="actived_localization">Activate localization</string>

    <string-array name="statut_arrays">
        <item>Dispo</item>
        <item>Vendu</item>
    </string-array>

    <string-array name="type_arrays">
        <item>Appartement</item>
        <item>Loft</item>
        <item>Manoir</item>
        <item>Maison</item>
    </string-array>

    <string-array name="currency_arrays">
        <item>USD</item>
        <item>EURO</item>
    </string-array>
</resources>
