<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/activity_main_drawer_map"
                android:title="@string/map"
                android:icon="@drawable/baseline_map_black_24"/>

                <item
                        android:id="@+id/activity_main_drawer_simulator"
                        android:title="@string/simulate"
                        android:icon="@drawable/calculator_24"/>
                <item
                        android:id="@+id/activity_main_drawer_settings"
                        android:title="@string/settings"
                        android:icon="@drawable/baseline_settings_applications_black_24"/>
            </group>


</menu>