<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context=".controller.fragment.SelectPropertyFragment">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_property"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:textColor="@color/quantum_black_100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_gravity="center"
        android:text="@string/or"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/quantum_black_100"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_property"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textColor="@color/quantum_black_100"/>

</LinearLayout>