<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="10dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content">

<LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/label"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/statut_arrays"
            android:prompt="@string/statut_prompt" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/created_date"/>
    <DatePicker
            android:id="@+id/datePicker_created_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/date_of_sale_text_view_fragment1"
            android:text="@string/date_of_sale"
            android:visibility="gone"/>
    <DatePicker
            android:id="@+id/datePicker_sale_date"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/MyErrorText"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/edit_real_estate_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:inputType="textAutoComplete"
                android:theme="@style/MyEditText"
                android:textSize="18sp"
                android:hint="@string/real_estate_manager"/>

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label"
            android:background="@color/colorPrimary"
            android:id="@+id/nextToB"
            android:padding="16sp"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:paddingStart="32sp"
                android:paddingEnd="32sp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                app:fontFamily="@font/manropemedium"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:gravity="center"
                />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>