<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_margin="10dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="vertical"
            tools:ignore="MissingConstraints">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/MyErrorText"
            app:errorEnabled="true">


        <EditText
                android:id="@+id/simulator_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:imeOptions="actionNext"
                android:digits="0123456789"
                android:theme="@style/MyEditText"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:hint="@string/price"/>
    </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">


            <EditText
                    android:id="@+id/simulator_apport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:imeOptions="actionNext"
                    android:digits="0123456789"
                    android:theme="@style/MyEditText"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:hint="@string/contribution"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">


            <EditText
                    android:id="@+id/simulator_taux"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:imeOptions="actionNext"
                    android:digits="0123456789.,"
                    android:theme="@style/MyEditText"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:hint="@string/interest_rate"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">


            <EditText
                    android:id="@+id/simulator_duree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:imeOptions="actionDone"
                    android:digits="0123456789"
                    android:theme="@style/MyEditText"
                    android:inputType="numberDecimal"
                    android:textSize="18sp"
                    android:hint="@string/duration"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label"
                android:background="@color/colorPrimary"
                android:id="@+id/simuate_button"
                android:padding="16sp"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    app:fontFamily="@font/manropemedium"
                    android:layout_height="wrap_content"
                    android:text="@string/simulate"
                    android:gravity="center"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress"
                android:background="@color/colorPrimary"
                android:id="@+id/simulator_back_button"
                android:padding="16sp"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    app:fontFamily="@font/manropemedium"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:gravity="center"
                    />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>