<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    <ImageView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp" android:layout_marginLeft="16dp"/>


    <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/label"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
    android:orientation="horizontal">

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
    android:text="Type: "/>

    <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:entries="@array/type_arrays"
            android:prompt="@string/statut_prompt" />

</LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">
        <EditText
                android:id="@+id/edit_number_of_romms_fragment_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:imeOptions="actionNext"
                android:digits="0123456789"
                android:theme="@style/MyEditText"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:hint="Rooms"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">

        <EditText
                android:id="@+id/edit_number_of_batthrooms_fragment_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:digits="0123456789"
                android:theme="@style/MyEditText"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:textSize="18sp"
                android:hint="@string/bathrooms"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">
        <EditText
                android:id="@+id/edit_number_of_bedrooms_fragment_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:imeOptions="actionNext"
                android:digits="0123456789"
                android:theme="@style/MyEditText"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:hint="@string/bedrooms"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">


        <EditText
                android:id="@+id/edit_area_fragment_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:imeOptions="actionNext"
                android:digits="0123456789"
                android:theme="@style/MyEditText"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:hint="@string/area_m"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MyErrorText"
                app:errorEnabled="true">
        <EditText
                android:id="@+id/edit_price_fragment_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:digits="0123456789"
                android:imeOptions="actionDone"
                android:theme="@style/MyEditText"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:hint="@string/price_dollar"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label"
            android:background="@color/colorPrimary"
            android:id="@+id/nextToC"
            android:padding="16sp"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:paddingStart="32sp"
                android:paddingEnd="32sp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                app:fontFamily="@font/manropemedium"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:gravity="center"
                />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>